<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingHorizontal="@dimen/normalMargin">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallMargin"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="@string/now"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textFontWeight="700"
                android:textSize="@dimen/largeFontSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/playing"
                android:textAllCaps="true"
                android:textSize="@dimen/largeFontSize" />

        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/album_art_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/smallMargin"
        android:contentDescription="@string/album_picture"
        android:src="@drawable/icon_album"
        app:layout_constraintBottom_toTopOf="@id/song_title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/primaryColor"
        android:textFontWeight="700"
        app:layout_constraintBottom_toTopOf="@+id/artist_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_art_view" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textFontWeight="700"
        app:layout_constraintBottom_toTopOf="@+id/album_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/song_title" />

    <TextView
        android:id="@+id/album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textFontWeight="300"
        app:layout_constraintBottom_toTopOf="@+id/time_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/artist_name" />

    <RelativeLayout
        android:id="@+id/time_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        app:layout_constraintBottom_toTopOf="@+id/control_bar"
        app:layout_constraintTop_toBottomOf="@id/album_name">

        <SeekBar
            android:id="@+id/timing"
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="6dp"
            android:indeterminateOnly="false"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:progressDrawable="@drawable/timing_seek_bar"
            android:thumb="@null" />

        <TextView
            android:id="@+id/current_timing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timing"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/max_timing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timing"
            android:layout_alignParentEnd="true"
            android:gravity="end" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/control_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/volume_bar"
        app:layout_constraintTop_toBottomOf="@+id/time_bar">

        <ImageView
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/previous_song"
            android:src="@drawable/icon_prev" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/play_song"
            android:src="@drawable/play_pause" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/next_song"
            android:src="@drawable/icon_next" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/volume_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintTop_toBottomOf="@id/control_bar">

        <SeekBar
            android:id="@+id/volume_level"
            android:layout_width="match_parent"
            android:layout_height="14dp"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:indeterminateOnly="false"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:progressDrawable="@drawable/volume_seek_bar"
            android:thumb="@drawable/volume_seek_bar_thumb" />

        <ImageView
            android:id="@+id/volume_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/volume_level"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/volume_down"
            android:src="@drawable/icon_vol_down" />

        <ImageView
            android:id="@+id/volume_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/volume_level"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/volume_up"
            android:gravity="end"
            android:src="@drawable/icon_vol_up" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/smallMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/volume_bar">

        <ImageView
            android:id="@+id/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/shuffle_button"
            android:src="@drawable/shuffle_selector" />

        <ImageView
            android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/repeat_button"
            android:src="@drawable/repeat_selector" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>